--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1943,7 +1943,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #04a7c6;
+  background: #ff1fff;
 }
 .links-of-blogroll {
   font-size: 13px;
